revert field name from tx_type to type. only use python variable tx_type to avoid shadowing
